Stream File Upload

--- a/FireShare/web.config
+++ b/FireShare/web.config
@@ -22,7 +22,7 @@
     <asp scriptErrorSentToBrowser="true" />
     <security>
       <requestFiltering>
-        <requestLimits maxAllowedContentLength="2147483647" />
+        <requestLimits maxAllowedContentLength="4294967295" />
       </requestFiltering>
     </security>
   </system.webServer>
@@ -30,8 +30,6 @@
     <httpRuntime maxRequestLength="2147483647" />
     <customErrors mode="Off" />
     <compilation debug="true" />
-    <authentication mode="Forms">
-      <forms loginUrl="~/Auth/Login" timeout="2880" />
-    </authentication>
+    <authentication mode="None" />
   </system.web>
 </configuration>
