File Stream Upload

--- a/FireShare/appsettings.Development.json
+++ b/FireShare/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=mssql.afonsoft.com.br;Database=afonsoft_setbox_db;user id=afonsoft_setbox;password=R5q9y6t2;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
