--- a/FireShare/FireShare.csproj
+++ b/FireShare/FireShare.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire.SQLite.Core" Version="1.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
@@ -14,10 +15,14 @@
 	<PackageReference Include="Hangfire.AspNetCore" Version="1.7.13" />
 	<PackageReference Include="Hangfire.Console" Version="1.4.2" />
 	<PackageReference Include="Hangfire.SqlServer" Version="1.7.13" />
+	<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="3.1.8" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.8" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.8" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.8" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.8" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8">
 		<PrivateAssets>all</PrivateAssets>
@@ -31,6 +36,7 @@
 	<PackageReference Include="Hangfire.SqlServer" Version="1.7.13" />
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
 	<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.8" />
+	<PackageReference Include="sqlite" Version="3.13.0" />
   </ItemGroup>
 
 </Project>
