--- a/FireShare/appsettings.json
+++ b/FireShare/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=mssql.afonsoft.com.br;Database=afonsoft_setbox_db;user id=afonsoft_setbox;password=R5q9y6t2;"
+    "Default": "Data Source=sqliteFileShare.db;"
   },
   "Logging": {
     "LogLevel": {
