Fix Download and Upload

--- a/FileShare/web.config
+++ b/FileShare/web.config
@@ -25,6 +25,7 @@
         <requestLimits maxAllowedContentLength="4294967295" />
       </requestFiltering>
     </security>
+	<serverRuntime uploadReadAheadSize="2147483647"/>
   </system.webServer>
   <system.web>
     <httpRuntime maxRequestLength="2147483647" />
