--- a/FileShare/FileShare.csproj
+++ b/FileShare/FileShare.csproj
@@ -30,13 +30,14 @@
 	</PackageReference>
 	<PackageReference Include="Afonsoft.Extensions" Version="2020.5.5" />
 	<PackageReference Include="Afonsoft.Logger" Version="2019.8.26" />
-	<PackageReference Include="Hangfire" Version="1.7.13" />
-	<PackageReference Include="Hangfire.AspNetCore" Version="1.7.13" />
+	<PackageReference Include="Hangfire" Version="1.7.14" />
+	<PackageReference Include="Hangfire.AspNetCore" Version="1.7.14" />
 	<PackageReference Include="Hangfire.Console" Version="1.4.2" />
-	<PackageReference Include="Hangfire.SqlServer" Version="1.7.13" />
+	<PackageReference Include="Hangfire.SqlServer" Version="1.7.14" />
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
 	<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.8" />
 	<PackageReference Include="sqlite" Version="3.13.0" />
+	<PackageReference Include="Winista.MimeDetect" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
