--- a/FileShare/FileShare.csproj
+++ b/FileShare/FileShare.csproj
@@ -9,7 +9,10 @@
   <ItemGroup>
   <PackageReference Include="Hangfire.Core" Version="1.7.14" />
   <PackageReference Include="Hangfire.SQLite.Core" Version="1.0.2" />
+  <PackageReference Include="Microsoft.AspNetCore.Authentication.Core" Version="2.2.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8" />
   <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.8" />
   <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
   <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
 	<PackageReference Include="Hangfire.AspNetCore" Version="1.7.13" />
