--- a/FileShare/appsettings.Development.json
+++ b/FileShare/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=sqliteFileShare.db;"
+    "Default": "Server=mssql.afonsoft.com.br;Database=afonsoft_files_db;user id=afonsoft_files;password=r5q9y6t2;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
