--- a/FileShare/appsettings.json
+++ b/FileShare/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=mssql.afonsoft.com.br;Database=afonsoft_files_db;user id=afonsoft_files;password=R5q9y6t2;"
+    "Default": "Server=mssql.afonsoft.com.br;Database=afonsoft_files_db;user id=afonsoft_files;password=r5q9y6t2;"
   },
   "Logging": {
     "LogLevel": {
