--- a/FileShare/FileShare.csproj
+++ b/FileShare/FileShare.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
   <PackageReference Include="Hangfire.Core" Version="1.7.18" />
+  <PackageReference Include="Hangfire.Heartbeat" Version="0.5.0" />
   <PackageReference Include="Hangfire.SQLite.Core" Version="1.0.2" />
   <PackageReference Include="Microsoft.AspNetCore.Authentication.Core" Version="2.2.0" />
   <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
