--- a/FileShare/FileShare.csproj
+++ b/FileShare/FileShare.csproj
@@ -10,6 +10,7 @@
   <PackageReference Include="Hangfire.Core" Version="1.7.18" />
   <PackageReference Include="Hangfire.Heartbeat" Version="0.5.0" />
   <PackageReference Include="Hangfire.SQLite.Core" Version="1.0.2" />
+  <PackageReference Include="IpData" Version="2.0.1" />
   <PackageReference Include="Microsoft.AspNetCore.Authentication.Core" Version="2.2.0" />
   <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
   <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
