--- a/FileShare/FileShare.csproj
+++ b/FileShare/FileShare.csproj
@@ -1,45 +1,54 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <UserSecretsId>a2dc9761-93b1-42c6-b66b-638ff3986a1b</UserSecretsId>
+	<LangVersion>9.0</LangVersion>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<GenerateAssemblyTitleAttribute>true</GenerateAssemblyTitleAttribute>
+	<GenerateAssemblyDescriptionAttribute>true</GenerateAssemblyDescriptionAttribute>
+	<GenerateAssemblyConfigurationAttribute>true</GenerateAssemblyConfigurationAttribute>
+	<GenerateAssemblyCompanyAttribute>true</GenerateAssemblyCompanyAttribute>
+	<GenerateAssemblyProductAttribute>true</GenerateAssemblyProductAttribute>
+	<GenerateAssemblyCopyrightAttribute>true</GenerateAssemblyCopyrightAttribute>
+	<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+	<Deterministic>true</Deterministic>
+	<OpenApiGenerateDocumentsOnBuild>false</OpenApiGenerateDocumentsOnBuild>
+	<NoWarn>$(NoWarn);CS1591;SYSLIB0001;SYSLIB0002;SYSLIB0003</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
-  <PackageReference Include="Hangfire.Core" Version="1.7.18" />
-  <PackageReference Include="Hangfire.Heartbeat" Version="0.5.0" />
-  <PackageReference Include="Hangfire.SQLite.Core" Version="1.0.2" />
-  <PackageReference Include="IpData" Version="2.0.1" />
-  <PackageReference Include="Microsoft.AspNetCore.Authentication.Core" Version="2.2.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.0" />
-	<PackageReference Include="Hangfire.AspNetCore" Version="1.7.13" />
+	<PackageReference Include="Hangfire.Core" Version="1.7.33" />
+	<PackageReference Include="Hangfire.Heartbeat" Version="0.5.1" />
+	<PackageReference Include="Hangfire.SQLite.Core" Version="1.0.2" />
+	<PackageReference Include="IpData" Version="2.0.1" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.Core" Version="2.2.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.4" />
+	<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.4" />
+	<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.4" />
+	<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.4" />
+	<PackageReference Include="Hangfire.AspNetCore" Version="1.7.33" />
 	<PackageReference Include="Hangfire.Console" Version="1.4.2" />
-	<PackageReference Include="Hangfire.SqlServer" Version="1.7.13" />
-	<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.0" />
+	<PackageReference Include="Hangfire.SqlServer" Version="1.7.33" />
+	<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.4" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.4" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.4" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.4" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.4" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="7.0.4" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0">
+	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.4">
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
 	<PackageReference Include="Afonsoft.Extensions" Version="2020.5.5" />
 	<PackageReference Include="Afonsoft.Logger" Version="2019.8.26" />
-	<PackageReference Include="Hangfire.AspNetCore" Version="1.7.18" />
-	<PackageReference Include="Hangfire.Console" Version="1.4.2" />
-	<PackageReference Include="Hangfire.SqlServer" Version="1.7.18" />
-	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
-	<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
 	<PackageReference Include="sqlite" Version="3.13.0" />
 	<PackageReference Include="Winista.MimeDetect" Version="1.0.1" />
   </ItemGroup>
