--- a/FileShare/web.config
+++ b/FileShare/web.config
@@ -1,47 +1,47 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <!-- To customize the asp.net core module uncomment and edit the following section. 
+	<!-- To customize the asp.net core module uncomment and edit the following section.
   For more info see https://go.microsoft.com/fwlink/?linkid=838655 -->
-  <system.webServer>
-	<modules runAllManagedModulesForAllRequests="false">
-		<remove name="WebDAVModule" />
-	</modules>
-    <handlers>
-	    <remove name="aspNetCore" />
-	    <remove name="WebDAV" />
-	    <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-	    <remove name="OPTIONSVerbHandler" />
-	    <remove name="TRACEVerbHandler" />
-        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
-    </handlers>
-    <aspNetCore processPath="%LAUNCHER_PATH%" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false" startupTimeLimit="3600" requestTimeout="02:00:00" hostingModel="inprocess">
-      <environmentVariables>
-        <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
-        <environmentVariable name="COMPLUS_ForceENC" value="1" />
-        <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44354" />
-      </environmentVariables>
-      <handlerSettings>
-        <handlerSetting name="debugFile" value=".\logs\aspnetcore-debug.log" />
-        <handlerSetting name="debugLevel" value="FILE,TRACE" />
-      </handlerSettings>
-    </aspNetCore>
-    <httpErrors errorMode="Detailed" existingResponse="PassThrough" />
-    <asp scriptErrorSentToBrowser="true" />
-    <security>
-      <requestFiltering>
-        <requestLimits maxAllowedContentLength="4294967295" />
-      </requestFiltering>
-    </security>
-	<httpProtocol>
-		<customHeaders>
-			<remove name="X-Powered-By" />
-		</customHeaders>
-	</httpProtocol>
-  </system.webServer>
-  <system.web>
-    <httpRuntime maxRequestLength="2147483647" executionTimeout="7200" shutdownTimeout="7200" requestLengthDiskThreshold="512"/>
-	  <customErrors mode="Off" />
-    <compilation debug="true" />
-    <authentication mode="None" />
-  </system.web>
+	<system.webServer>
+		<modules runAllManagedModulesForAllRequests="false">
+			<remove name="WebDAVModule" />
+		</modules>
+		<handlers>
+			<remove name="aspNetCore" />
+			<remove name="WebDAV" />
+			<remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+			<remove name="OPTIONSVerbHandler" />
+			<remove name="TRACEVerbHandler" />
+			<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+		</handlers>
+		<aspNetCore processPath="%LAUNCHER_PATH%" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false" startupTimeLimit="3600" requestTimeout="02:00:00" hostingModel="outofprocess">
+			<environmentVariables>
+				<environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
+				<environmentVariable name="COMPLUS_ForceENC" value="1" />
+				<environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44354" />
+			</environmentVariables>
+			<handlerSettings>
+				<handlerSetting name="debugFile" value=".\logs\aspnetcore-debug.log" />
+				<handlerSetting name="debugLevel" value="FILE,TRACE" />
+			</handlerSettings>
+		</aspNetCore>
+		<httpErrors errorMode="Detailed" existingResponse="PassThrough" />
+		<asp scriptErrorSentToBrowser="true" />
+		<security>
+			<requestFiltering>
+				<requestLimits maxAllowedContentLength="4294967295" />
+			</requestFiltering>
+		</security>
+		<httpProtocol>
+			<customHeaders>
+				<remove name="X-Powered-By" />
+			</customHeaders>
+		</httpProtocol>
+	</system.webServer>
+	<system.web>
+		<httpRuntime maxRequestLength="2147483647" executionTimeout="7200" shutdownTimeout="7200" requestLengthDiskThreshold="512" />
+		<customErrors mode="Off" />
+		<compilation debug="true" />
+		<authentication mode="None" />
+	</system.web>
 </configuration>
