--- a/FileShare/web.config
+++ b/FileShare/web.config
@@ -3,7 +3,7 @@
 	<!-- To customize the asp.net core module uncomment and edit the following section.
   For more info see https://go.microsoft.com/fwlink/?linkid=838655 -->
 	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="false">
+		<modules runAllManagedModulesForAllRequests="true">
 			<remove name="WebDAVModule" />
 		</modules>
 		<handlers>
@@ -14,15 +14,13 @@
 			<remove name="TRACEVerbHandler" />
 			<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
 		</handlers>
-		<aspNetCore processPath="%LAUNCHER_PATH%" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false" startupTimeLimit="3600" requestTimeout="02:00:00" hostingModel="outofprocess">
+		<aspNetCore processPath="%LAUNCHER_PATH%" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false" startupTimeLimit="3600" requestTimeout="23:00:00" hostingModel="outofprocess">
 			<environmentVariables>
 				<environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
-				<environmentVariable name="COMPLUS_ForceENC" value="1" />
-				<environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44354" />
 			</environmentVariables>
 			<handlerSettings>
 				<handlerSetting name="debugFile" value=".\logs\aspnetcore-debug.log" />
-				<handlerSetting name="debugLevel" value="FILE,TRACE" />
+				<handlerSetting name="debugLevel" value="ERROR" />
 			</handlerSettings>
 		</aspNetCore>
 		<httpErrors errorMode="Detailed" existingResponse="PassThrough" />
@@ -43,5 +41,6 @@
 		<customErrors mode="Off" />
 		<compilation debug="true" />
 		<authentication mode="None" />
+		<httpCookies httpOnlyCookies="true" requireSSL="false" />
 	</system.web>
 </configuration>
